--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^2.0.1",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
