--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "axios": "^1.10.0",
     "bcryptjs": "github:dcodeIO/bcrypt.js",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.1",
@@ -24,10 +25,10 @@
     "multer": "^2.0.1",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
-    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "replicate": "^1.0.1",
     "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.0"
